Creando css para media query

--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/grid.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Kitten</title>
-  </head>
-  <body>
-    <!-- Kitten in the morning -->
-    <div class="row">
-      <div class="col-12">
-        <img id="kitten1"src="assets/img/kitten-medium.png" alt="kitten1">
-      </div>
-    </div>
 
-    <!-- Kitten in the afternoon -->
-    <div class="row">
-      <div class="col-12">
-        <img id="kitten2" src="assets/img/kitten-large.png" alt="kitten2">
-      </div>
-    </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/grid.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/media.css">
+  <title>Kitten</title>
+</head>
 
-    <!-- Kitten in the night -->
-    <div class="row">
-      <div class="col-12">
-          <img id="kitten3" src="assets/img/kitten-small.png" alt="kitten2">
-      </div>
+<body>
+  <!-- Kitten in the morning -->
+  <div class="row">
+    <div class="col-12">
+      <img id="kitten1" src="assets/img/kitten-medium.png" alt="kitten1">
     </div>
+  </div>
 
-  </body>
+  <!-- Kitten in the afternoon -->
+  <div class="row">
+    <div class="col-12">
+      <img id="kitten2" src="assets/img/kitten-large.png" alt="kitten2">
+    </div>
+  </div>
+
+  <!-- Kitten in the night -->
+  <div class="row">
+    <div class="col-12">
+      <img id="kitten3" src="assets/img/kitten-small.png" alt="kitten2">
+    </div>
+  </div>
+
+</body>
+
 </html>
